@@ -1,5 +1,5 @@
 /* { dg-do compile } */
-/* { dg-options "-O2 -fno-strict-overflow -fdump-tree-ivcanon-details" } */
+/* { dg-options "-O2 -fno-strict-overflow -fdump-tree-tailc-details" } */
 
 void bar();
 void foo(char *dst)
@@ -11,4 +11,6 @@ void foo(char *dst)
   } while (dst < end);
 }
 
-/* { dg-final { scan-tree-dump-times " zero if " 1 "ivcanon" } } */
+/* The loop only iterates once because pointer overflow always has undefined
+   semantics.  As a result, call to bar becomes tail call.  */
+/* { dg-final { scan-tree-dump-times "Found tail call " 1 "tailc" } } */
